--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ color: #828282;
     background: linear-gradient(88.33deg, #FBA24F -7.64%, #FF1E1E 145.94%);
     box-shadow: 0px 2px 30px rgba(252, 143, 73, 0.5);
     border-radius: 100px;
+    margin: 0px;
 }
 .first-image{
     width: 50%
