--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ nav img {
 nav {
     display: flex;
     margin-top: 50px;
-    background-image: url(../images/frame1.png);
+    background-image: url(images/frame1.png);
     align-items: center;
     justify-content: center;
 
@@ -87,7 +87,7 @@ padding-left: 50px;
 width: 85%;
 }
 .background{
-    background-image: url(/images/frame2.jpg);
+    background-image: url(images/frame2.jpg);
 }
 .second-image {
     width: 50%
